--- a/HT/css/style.css
+++ b/HT/css/style.css
@@ -26,7 +26,7 @@ html,body {
 
 
 /*style ficha cadastro*/
-#centraliza-button {
+.centraliza-button {
     text-align: center;
 }
 
@@ -68,6 +68,14 @@ html,body {
     overflow-x: auto;
 }
 
+.icon-edit{
+    font-size: 20px;
+}
+
+.icon-delete{
+    font-size: 20px;
+}
+
 
 /*style dashboard*/
 .jumbotron {
@@ -77,7 +85,7 @@ html,body {
 
 hr.dark{
     border-top: 1px solid #222;
-    width: 40%;
+    width: 50%;
 }
 
 .fa-running{
@@ -114,6 +122,6 @@ hr.dark{
 #frase-logout {
     font-size: 27px;
     color: #222;
-    margin-top: 140px;
+    margin-top: 120px;
 }
 
