--- a/HT/css/style.css
+++ b/HT/css/style.css
@@ -131,3 +131,14 @@ hr.dark{
     margin-top: 120px;
 }
 
+
+/*style formulário cadastro*/
+#nomeInput {
+    max-width: 1000px;
+    margin-left: 40px;
+}
+
+#dataInput {
+    max-width: 200px;
+    margin-left: 40px;
+}
